plugins/cpu: Remove "wait" from total CPU usage sensors

"wait" consistant mainly of "iowait" which is time the CPU is idle but
something's waiting on IO. This means it's not really actual CPU load,
so we should count it towards the total load.

BUG: 497341


(cherry picked from commit 2b6c91971a43d1d245ff284006cead43d2f71260)

Co-authored-by: Arjen Hiemstra <ahiemstra@heimr.nl>